调整许可证信息

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,5 @@
             "Baiming\\ApisFrame\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "beta"
 }
