--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
     "name": "baiming/apis_frame",
     "description": "api框架初始化系统",
-    "version": "1.0.0-beta",
+    "version": "1.0.0",
     "type": "library",
-    "keywords": "",
     "authors": [
         {
             "name": "Baiming",
