重构包服务提供者&复写默认包配置方法

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "alibabacloud/dysmsapi-20170525": "2.0.9"
     },
+    "require-dev": {
+        "ext-bcmath": "*"
+    },
     "autoload": {
         "psr-4": {
             "ApisFrame\\": "src/"
